# Basic-GPU-Kernels

./: CMakeLists.txt  README.md
.devcontainer/: devcontainer.json
add/: CMakeLists.txt  add.cu  add.py  benchmark.ipynb  build.cpp  check.cu  setup.py
flashattention/: FA.cuh  check.cu
gemm/: check.cu  gemm.cuh
reduce/: CMakeLists.txt  benchmark.ipynb  build.cpp  check.cu  reduce.cu  reduce.py  setup.py
softmax/: CmakeLists.txt  benchmark.ipynb  build.cpp  check.cu  demo.cu  setup.py  softmax.cu  softmax.cuh  softmax.py
transpose/: benchmark.ipynb  build.cpp  check.cu  setup.py  transpose.cu
